Bug 264240 - Calendar/Todo templates don't applying
Summary: Calendar/Todo templates don't applying
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: todo (other bugs)
Version First Reported In: 4.6 pre
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-25 12:51 UTC by Daltin
Modified: 2011-01-26 08:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daltin 2011-01-25 12:51:21 UTC
Version:           4.6 pre (using KDE 4.5.95) 
OS:                Linux

Templates was created, but when i try to apply them i have an error
"Error loading template file '~/.kde/share/apps/korganizer/templates/Event/test 000'."
New template was created in folder ~/.kde/share/apps/korganizer/templates/
If copy template from templates/ to templates/Todo or templates/Event all ok.

Reproducible: Always

Steps to Reproduce:
1. Create template
2. Apply template

Actual Results:  
error: Error loading template file '~/.kde/share/apps/korganizer/templates/Event/[template name]'.

Expected Results:  
apply template
Comment 1 Sergio Martins 2011-01-26 08:39:34 UTC
Git commit bd00dfc660980b2814ef2a8edda5e3c515d22cff by Sergio Martins.
Pushed by smartins into branch 'master'.

Templates work again.

BUG: 264240

M  +1    -1    incidenceeditor-ng/eventortododialog.cpp     

http://commits.kde.org/ee6cc38b/bd00dfc660980b2814ef2a8edda5e3c515d22cff