Templates work again.

BUG: 264240